--- a/_includes/education-section.html
+++ b/_includes/education-section.html
@@ -2,12 +2,14 @@
 <!-- education -->
 <section class="section position-relative">
   <div class="container">
-    <div class="row">
+    <div class="row justify-content-center">
       <div class="col-lg-12 text-center">
         <h2 class="section-title">{{ site.data.settings.education-title }}</h2>
       </div>
-      {% for education in site.data.settings.education %}
-      <div class="col-lg-6 col-md-6 mb-80">
+    </div>
+    {% for education in site.data.settings.education %}
+    <div class="row justify-content-center">
+      <div class="col-lg-6 col-md-6 mb-40">
         <div class="d-flex">
           <div class="mr-lg-5 mr-3">
             <i class="ti-medall icon icon-light icon-bg bg-white shadow rounded-circle d-block"></i>
@@ -19,11 +21,13 @@
           </div>
         </div>
       </div>
-      {% endfor %}
     </div>
+    {% endfor %}
+  </div>
   </div>
   <!-- bg image -->
-  <img class="img-fluid edu-bg-image w-100" src="{{ site.baseurl }}/assets/images/backgrounds/education-bg.png" alt="bg-image">
+  <img class="img-fluid edu-bg-image w-100" src="{{ site.baseurl }}/assets/images/backgrounds/education-bg.png"
+    alt="bg-image">
 </section>
 <!-- /education -->
 {% endif %}
