--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,8 +23,8 @@ layout: default
 
 <section class="section">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
+    <div class="row justify-content-center">
+      <div class="col-lg-8">
         <h3 class="font-tertiary mb-5">{{ page.title | escape }}</h3>
         <p class="font-secondary">Published on {{ page.date | date: '%b %d, %Y' }} by <span class="text-primary">{{ page.author }}</span
             class="text-primary"> on {% for tag in page.tags %}<span>{{ tag }} </span>{% endfor %}</p>
