Clean up ignored files

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -39,11 +39,16 @@ layout: default
 </section>
 <!-- /about -->
 
+
+{% include education-section.html %}
+
+{% comment %}
 {% include work-process-section.html %}
 
 {% include team-section.html %}
+{% endcomment %}
   
-<section class="section">
+<!-- <section class="section">
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
@@ -52,4 +57,4 @@ layout: default
     </div>
     {% include client-slider.html %}
   </div>
-</section>
+</section> -->
