--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,9 @@ layout: compress
 
   {{ content }}
 
+  {% comment %}
   {% include contact-section.html %}
+  {% endcomment %}
 
   {% include footer.html %}
 
