--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -130,6 +130,14 @@ a:hover {
   color: $text-color-light !important;
 }
 
+.mb-m10 {
+  margin-bottom: -10px !important;
+}
+
+.mb-0 {
+  margin-bottom: 0px !important;
+}
+
 .mb-10 {
   margin-bottom: 10px !important;
 }
