--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,9 +18,9 @@
       </div>
     </div>
   </div>
-  <div class="border-top text-center border-dark py-5">
+  <!-- <div class="border-top text-center border-dark py-5">
     <p class="mb-0 text-light">{{site.data.settings.copyright | markdownify}}</p>
-  </div>
+  </div> -->
 </footer>
 <!-- /footer -->
 
