better header on frontpage

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -9,6 +9,14 @@ body {
 }
 
 /* preloader */
+.masthead {
+  height: 400px;
+  min-height: 500px;
+  background-image: url($baseurl + "/assets/images/backgrounds/abstract2.jpeg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 
 .preloader {
   position: fixed;
