--- a/_includes/hero-section.html
+++ b/_includes/hero-section.html
@@ -1,16 +1,18 @@
 <!-- hero area -->
-<section class="hero-area bg-primary" id="parallax">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-11 mx-auto">
-        <h1 class="text-white font-tertiary">{{ site.data.settings.hero.hero-title }}</h1>
+<section class="masthead hero-area mb-60" id="parallax">
+  <div class="container h-100">
+    <div class="row align-items-center">
+      <div class="col-sx-4 mx-auto mb-40">
+        <img class="img-fluid rounded" src="{{ site.baseurl }}/assets/images/about/emil.jpeg" alt="bg-shape">
       </div>
     </div>
+    <!-- <div class="row align-items-center">
+      <div class="col-lg-12 mx-auto text-center">
+        <h3 class="text-white font-tertiary">{{ site.data.settings.hero.hero-title }}</h1>
+      </div>
+    </div> -->
   </div>
-  <div class="layer-bg w-100">
-    <img class="img-fluid w-100" src="{{ site.baseurl }}/assets/images/illustrations/leaf-bg.png" alt="bg-shape">
-  </div>
-  <div class="layer" id="l2">
+  <!-- <div class="layer" id="l2">
     <img src="{{ site.baseurl }}/assets/images/illustrations/dots-cyan.png" alt="bg-shape">
   </div>
   <div class="layer" id="l3">
@@ -33,13 +35,11 @@
   </div>
   <div class="layer" id="l9">
     <img src="{{ site.baseurl }}/assets/images/illustrations/leaf-cyan-2.png" alt="bg-shape">
-  </div>
+  </div> -->
   <!-- social icon -->
-  <ul class="list-unstyled ml-5 mt-3 position-relative zindex-1">
+  <ul class="list-unstyled ml-5 mt-1 position-relative zindex-1">
     {% for social in site.data.settings.social %}
     <li class="mb-3"><a class="text-white" href="{{ social.link }}"><i class="{{ social.icon }}"></i></a></li>
     {% endfor %}
   </ul>
-  <!-- /social icon -->
 </section>
-<!-- /hero area -->
