--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -12,6 +12,8 @@ VERSION:	Versoin Number
 [TABLE OF CONTENTS]
 -------------------------------------------------------------------*/
 
+$baseurl: "{{ site.baseurl }}";
+
 @import 'variables';
 
 @import 'mixins';
