--- a/assets/scss/templates/_hero-area.scss
+++ b/assets/scss/templates/_hero-area.scss
@@ -1,9 +1,9 @@
 .hero-area {
-  padding: 300px 0 200px;
+  padding: 150px 0 200px;
   position: relative;
   @include tablet {
-    padding: 250px 0 150px;
-    overflow: hidden;
+    padding: 150px 0 150px;
+    //overflow: hidden;
   }
   h1{
     position: relative;
