--- a/_includes/hero-section.html
+++ b/_includes/hero-section.html
@@ -1,45 +1,15 @@
 <!-- hero area -->
-<section class="masthead hero-area mb-60" id="parallax">
-  <div class="container h-100">
+<section class="hero-area mb-60">
+  <ul class="list-unstyled ml-3 mt-3">
+    {% for social in site.data.settings.social %}
+    <li class="mb-3"><a class="text-white" href="{{ social.link }}"><i class="{{ social.icon }}"></i></a></li>
+    {% endfor %}
+  </ul>
+  <div class="container mt-n220">
     <div class="row align-items-center">
       <div class="col-sx-4 mx-auto mb-40">
         <img class="img-fluid rounded" src="{{ site.baseurl }}/assets/images/about/emil.jpeg" alt="bg-shape">
       </div>
     </div>
-    <!-- <div class="row align-items-center">
-      <div class="col-lg-12 mx-auto text-center">
-        <h3 class="text-white font-tertiary">{{ site.data.settings.hero.hero-title }}</h1>
-      </div>
-    </div> -->
   </div>
-  <!-- <div class="layer" id="l2">
-    <img src="{{ site.baseurl }}/assets/images/illustrations/dots-cyan.png" alt="bg-shape">
-  </div>
-  <div class="layer" id="l3">
-    <img src="{{ site.baseurl }}/assets/images/illustrations/leaf-orange.png" alt="bg-shape">
-  </div>
-  <div class="layer" id="l4">
-    <img src="{{ site.baseurl }}/assets/images/illustrations/dots-orange.png" alt="bg-shape">
-  </div>
-  <div class="layer" id="l5">
-    <img src="{{ site.baseurl }}/assets/images/illustrations/leaf-yellow.png" alt="bg-shape">
-  </div>
-  <div class="layer" id="l6">
-    <img src="{{ site.baseurl }}/assets/images/illustrations/leaf-cyan.png" alt="bg-shape">
-  </div>
-  <div class="layer" id="l7">
-    <img src="{{ site.baseurl }}/assets/images/illustrations/dots-group-orange.png" alt="bg-shape">
-  </div>
-  <div class="layer" id="l8">
-    <img src="{{ site.baseurl }}/assets/images/illustrations/leaf-pink-round.png" alt="bg-shape">
-  </div>
-  <div class="layer" id="l9">
-    <img src="{{ site.baseurl }}/assets/images/illustrations/leaf-cyan-2.png" alt="bg-shape">
-  </div> -->
-  <!-- social icon -->
-  <ul class="list-unstyled ml-5 mt-1 position-relative zindex-1">
-    {% for social in site.data.settings.social %}
-    <li class="mb-3"><a class="text-white" href="{{ social.link }}"><i class="{{ social.icon }}"></i></a></li>
-    {% endfor %}
-  </ul>
 </section>
