--- a/assets/scss/templates/_hero-area.scss
+++ b/assets/scss/templates/_hero-area.scss
@@ -1,4 +1,14 @@
 .hero-area {
+  // masthead
+  height: 500px;
+  min-height: 500px;
+  background-image: url($hero-bg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+
+  // rest
   padding: 150px 0 200px;
   position: relative;
   @include tablet {
@@ -10,6 +20,7 @@
     z-index: 2;
   }
 }
+
 
 .layer {
   position: absolute;
