--- a/assets/scss/templates/_homepage.scss
+++ b/assets/scss/templates/_homepage.scss
@@ -48,9 +48,17 @@
 /* education */
 .edu-bg-image {
   position: absolute;
-  left: 0;
-  top: -300px;
+  top: -230px;
   z-index: -1;
+
+  @include desktop {
+    top: -150px;
+  }
+
+  @include tablet {
+    top: -100px;
+  }
+
 }
 
 /* /education */
@@ -77,9 +85,10 @@
   }
 }
 
-.hover-shadow{
+.hover-shadow {
   transition: .2s ease;
-  &:hover{
+
+  &:hover {
     box-shadow: 0px 18px 40px 8px rgba(224, 241, 255, 0.54) !important;
   }
 }
@@ -115,7 +124,7 @@
   border-radius: inherit;
   top: 0;
   left: 0;
-  background: rgba($color: $black, $alpha: .3);
+  background: rgba($color: $black, $alpha: .5);
   opacity: 0;
   visibility: hidden;
   transition: .3s ease;
@@ -211,3 +220,11 @@
 }
 
 /* /footer */
+
+.card-img-top2 {
+  object-fit: cover;
+  height: 250px;
+  width: 100%;
+  border-top-left-radius: calc(.25rem - 1px);
+  border-top-right-radius: calc(.25rem - 1px)
+}
