--- a/assets/scss/templates/_navigation.scss
+++ b/assets/scss/templates/_navigation.scss
@@ -1,7 +1,14 @@
 .navigation{
   padding: 40px 130px;
-  transition: .3s ease;
   &.nav-bg {
+    transition: .3s ease;
+    background-color: $primary-color;
+    padding: 15px 100px;
+    @include desktop {
+      padding: 15px 20px;
+    }
+  }
+  &.nav-bg-static {
     background-color: $primary-color;
     padding: 15px 100px;
     @include desktop {
