--- a/_includes/hero-section.html
+++ b/_includes/hero-section.html
@@ -5,10 +5,10 @@
     <li class="mb-3"><a class="text-white" href="{{ social.link }}"><i class="{{ social.icon }}"></i></a></li>
     {% endfor %}
   </ul>
-  <div class="container mt-n220">
+  <div class="container mt-n150">
     <div class="row align-items-center">
       <div class="col-sx-4 mx-auto mb-40">
-        <img class="img-fluid rounded" src="{{ site.baseurl }}/assets/images/about/emil.jpeg" alt="bg-shape">
+        <img class="img-fluid rounded drop-shadow" src="{{ site.baseurl }}/assets/images/about/emil.jpeg" alt="bg-shape">
       </div>
     </div>
   </div>
