--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,16 +1,13 @@
 ---
 layout: default
 ---
-<script>
-  static_header = true
-</script>
 <!-- /page title -->
 
-<section class="section">
+<section class="section mt-100">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8">
-        <h3 class="font-tertiary mb-5">{{ page.title | escape }}</h3>
+        <h2 class="font-tertiary mb-5">{{ page.title | escape }}</h2>
         <p class="font-secondary">Published on {{ page.date | date: '%b %d, %Y' }} by <span class="text-primary">{{
             page.author }}</span class="text-primary"> on {% for tag in page.tags %}<span>{{ tag }} </span>{% endfor %}
         </p>
@@ -26,17 +23,5 @@ layout: default
 
 {% if site.data.settings.disqus-identifier %} {% include disqus-comments.html %} {% endif %}
 
-<!-- blog -->
-<section class="section">
-  <div class="container">
-    <div class="row">
-      <div class="col-12 text-center">
-        <h2 class="section-title">Similar Stories</h2>
-      </div>
-      {% for post in site.posts offset:0 limit:3 %}
-      {% include post.html %}
-      {% endfor %}
-    </div>
-  </div>
-</section>
-<!-- /blog -->
+
+{% include similar-posts.html %}
