--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -50,9 +50,9 @@ select {
   }
 }
 
-a.text-dark{
-  &:hover{
-    color: $primary-color !important;
+a.text-dark {
+  &:hover {
+    color: $primary-color  !important;
   }
 }
 
@@ -110,15 +110,15 @@ a:hover {
 }
 
 .bg-primary {
-  background: $primary-color !important;
+  background: $primary-color  !important;
 }
 
-.bg-gray{
-  background: $gray !important;
+.bg-gray {
+  background: $gray  !important;
 }
 
 .text-primary {
-  color: $primary-color !important;
+  color: $primary-color  !important;
 }
 
 .text-color {
@@ -126,11 +126,11 @@ a:hover {
 }
 
 .text-dark {
-  color: $text-color-dark !important;
+  color: $text-color-dark  !important;
 }
 
 .text-light {
-  color: $text-color-light !important;
+  color: $text-color-light  !important;
 }
 
 .mb-m10 {
@@ -181,19 +181,52 @@ a:hover {
   margin-bottom: 100px !important;
 }
 
+.mb-n80 {
+  margin-bottom: -80px !important;
+}
+
+.mb-n40 {
+  margin-bottom: -40px !important;
+}
+
+.mb-n1000 {
+  margin-bottom: -1000px !important;
+}
+
+.mt-40 {
+  margin-top: 40px !important
+}
+
+
+.mt-100 {
+  margin-top: 100px !important
+}
+
 .mt-n120 {
   margin-top: -120px !important
+}
+
+.mt-n140 {
+  margin-top: -140px !important
+}
+
+.mt-n150 {
+  margin-top: -150px !important
 }
 
 .mt-n220 {
   margin-top: -220px !important
 }
 
+.mt-n1000 {
+  margin-top: -1000px !important
+}
+
 .zindex-1 {
   z-index: 1;
 }
 
-.rounded-lg{
+.rounded-lg {
   border-radius: 15px;
 }
 
@@ -202,18 +235,18 @@ a:hover {
 }
 
 .font-secondary {
-  font-family: $secondary-font !important;
+  font-family: $secondary-font  !important;
 }
 
 .font-tertiary {
-  font-family: $secondary-font !important;
+  font-family: $secondary-font  !important;
 }
 
 .shadow {
   box-shadow: 0px 18px 39.1px 6.9px rgba(224, 241, 255, 0.34) !important;
 }
 
-.bg-dark{
+.bg-dark {
   background-color: #222222 !important;
 }
 
@@ -236,19 +269,22 @@ a:hover {
 /* /icon */
 
 /* slick slider */
-.slick-dots{
+.slick-dots {
   text-align: center;
   padding-left: 0;
-  li{
+
+  li {
     display: inline-block;
     margin: 2px;
-    &.slick-active{
-      button{
+
+    &.slick-active {
+      button {
         background: $white;
         width: 25px;
       }
     }
-    button{
+
+    button {
       height: 6px;
       width: 12px;
       background: rgba($color: $white, $alpha: .5);
@@ -260,34 +296,50 @@ a:hover {
     }
   }
 }
+
 /* /slick slider */
 
 /* form */
-.form-control{
+.form-control {
   border: 0;
   border-radius: 0;
   border-bottom: 1px solid $border-color;
   height: 60px;
-  &:focus{
+
+  &:focus {
     border-color: $primary-color;
     outline: 0;
     box-shadow: none !important;
   }
 }
 
-textarea.form-control{
+textarea.form-control {
   height: 120px;
 }
+
 /* /form */
 
 /* card */
-.card{
+.card {
   border: 0;
-  &-header{
+
+  &-header {
     border: 0;
   }
-  &-footer{
+
+  &-footer {
     border: 0;
   }
 }
+
 /* /card */
+
+
+.drop-shadow {
+  filter: drop-shadow(0 0 2rem rgba(29, 29, 29, 0.8));
+  clip-path: inset(0px 0px -100px 0px);
+}
+
+.highlight {
+  font-size: 16px;
+}
