--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -15,6 +15,8 @@ VERSION:	Version Number
 $baseurl: "{{ site.baseurl }}" + "/";
 $hero-bg: $baseurl + "{{ site.data.settings.hero.hero-bg }}";
 
+@import "sass-code-highlight/github"; 
+
 @import 'variables';
 
 @import 'mixins';
