--- a/assets/scss/templates/_hero-area.scss
+++ b/assets/scss/templates/_hero-area.scss
@@ -1,5 +1,6 @@
 .hero-area {
   // masthead
+  box-shadow: inset 0px 0px 150px rgba(36, 36, 36, 0.7);
   height: 500px;
   min-height: 500px;
   background-image: url($hero-bg);
