made hero banner slimmer

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -181,6 +181,11 @@ a:hover {
   margin-bottom: 100px !important;
 }
 
+.mb-180 {
+  margin-bottom: 180px !important;
+}
+
+
 .mb-n80 {
   margin-bottom: -80px !important;
 }
@@ -200,6 +205,14 @@ a:hover {
 
 .mt-100 {
   margin-top: 100px !important
+}
+
+.mt-n20 {
+  margin-top: -20px !important
+}
+
+.mt-n40 {
+  margin-top: -40px !important
 }
 
 .mt-n120 {
