--- a/_includes/hero-section.html
+++ b/_includes/hero-section.html
@@ -2,7 +2,7 @@
 <section class="hero-area mb-180">
   <ul class="list-unstyled ml-3 mt-3">
     {% for social in site.data.settings.social %}
-    <li class="mb-3"><a class="text-white" href="{{ social.link }}"><i class="{{ social.icon }}"></i></a></li>
+    <li class="mb-3"><a class="text-white" href="{{ social.link }}" target="_blank"><i class="{{ social.icon }}"></i></a></li>
     {% endfor %}
   </ul>
   <div class="container mt-n150">
