hover effect on blog post cards

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,6 +1,6 @@
 <div class="col-lg-4 col-sm-6 mb-4" onclick="location.href='{{ post.url | relative_url }}';" style="cursor:pointer;">
   <article class="card shadow">
-    <div class="hover-wrapper">
+    <div class="rounded hover-wrapper">
       <img class="rounded card-img-top2" src="{{ post.image | relative_url }}" alt="{{ post.title }}">
     </div>
 
