changed blog post to have hero section

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -60,6 +60,7 @@ a:hover {
   color: $primary-color;
 }
 
+
 .slick-slide {
   outline: 0;
 }
@@ -200,6 +201,10 @@ a:hover {
 
 .mt-40 {
   margin-top: 40px !important
+}
+
+.mt-80 {
+  margin-top: 100px !important
 }
 
 
