--- a/_includes/about-section.html
+++ b/_includes/about-section.html
@@ -7,7 +7,7 @@
         <!-- <a href="{{ site.data.settings.blurb-btn-link }}" class="btn btn-transparent">{{ site.data.settings.blurb-btn-name }}</a> -->
       </div>
       <div class="col-lg-10 mx-auto text-center">
-        <p class="font-primary paragraph-lg text-dark">{{ site.data.settings.blurb }}</p>
+        <p class="font-primary paragraph-lg text-dark">{{ site.data.settings.about }}</p>
         <!-- <a href="{{ site.data.settings.blurb-btn-link }}" class="btn btn-transparent">{{ site.data.settings.blurb-btn-name }}</a> -->
       </div>
     </div>
