--- a/_includes/blog-section.html
+++ b/_includes/blog-section.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
-        <h2 class="section-title">Latest Blogs</h2>
+        <h2 class="section-title">Latest Posts</h2>
       </div>
       {% for post in site.posts offset:0 limit:3 %}
       {% include post.html %}
@@ -11,7 +11,7 @@
     </div>
     <div class="row mt-40">
       <div class="col-lg-10 mx-auto text-center">
-        <a href="{{ site.baseurl }}/blog" class="btn btn-primary">See All Blog Posts</a>
+        <a href="{{ site.baseurl }}/blog" class="btn btn-primary">See All Posts</a>
       </div>
     </div>
   </div>
