--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,18 +2,32 @@
 layout: default
 ---
 <!-- /page title -->
+<section class="hero-area">
+  <ul class="list-unstyled ml-3 mt-3">
+    {% for social in site.data.settings.social %}
+    <li class="mb-3"><a class="text-white" href="{{ social.link }}" target="_blank"><i class="{{ social.icon }}"></i></a></li>
+    {% endfor %}
+  </ul>
+  <div class="container page-title">
+    <div class="row align-items-center">
+      <div class="col-12 text-center">
+        <h1 class="text-white font-tertiary">Blog</h1>
+      </div>
+    </div>
+  </div>
+</section>
 
-<section class="section mt-100">
+<section class="section">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-lg-8">
-        <h2 class="font-tertiary mb-5">{{ page.title | escape }}</h2>
-        <p class="font-secondary">Published on {{ page.date | date: '%b %d, %Y' }} by <span class="text-primary">{{
-            page.author }}</span class="text-primary"> on {% for tag in page.tags %}<span>{{ tag }} </span>{% endfor %}
-        </p>
+      <div class="col-lg-7">
         <div class="content">
           <img src="{{page.image | relative_url }}" class="img-fluid w-100 rounded float-left mr-5 mb-4"
             alt="{{page.title}}">
+            <h2 class="font-tertiary mb-5">{{ page.title | escape }}</h2>
+            <p class="font-secondary smaller-text mt-n40 mb-30">Published on {{ page.date | date: '%b %d, %Y' }} by <span class="text-primary">{{
+              page.author }}</span class="text-primary"> on {% for tag in page.tags %}<span>{{ tag }} </span>{% endfor %}
+          </p>
           {{ content }}
         </div>
       </div>
