--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -22,6 +22,10 @@ p, .paragraph {
   }
 }
 
+.smaller-text {
+  font-size: 15px;
+}
+
 h1,h2,h3,h4,h5,h6 {
   color: $text-color-dark;
   font-family: $secondary-font;
