fixed hero picture for mobile

--- a/_includes/hero-section.html
+++ b/_includes/hero-section.html
@@ -6,7 +6,7 @@
     {% endfor %}
   </ul>
   <div class="container mt-n150">
-    <div class="row align-items-center">
+    <div class="row align-items-center hero-image">
       <div class="col-sx-4 mx-auto mb-40">
         <img class="img-fluid rounded drop-shadow" src="{{ site.baseurl }}/assets/images/about/emil.jpeg" alt="bg-shape">
       </div>
