--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -232,6 +232,10 @@ a:hover {
   margin-top: -150px !important
 }
 
+.mt-n180 {
+  margin-top: -180px !important
+}
+
 .mt-n220 {
   margin-top: -220px !important
 }
