--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,7 +1,7 @@
 
 // Color Variables
 $primary-color: #056c67;
-$secondary-color: #2bfdff;
+$secondary-color: #ffd52b;
 $text-color: #4c4c4c;
 $text-color-dark: #000;
 $text-color-light: #999;
