--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -191,12 +191,27 @@ a:hover {
   margin-bottom: -80px !important;
 }
 
+.mb-n5 {
+  margin-bottom: -5px !important;
+}
+.mb-n10 {
+  margin-bottom: -10px !important;
+}
+
+.mb-n20 {
+  margin-bottom: -20px !important;
+}
+
 .mb-n40 {
   margin-bottom: -40px !important;
 }
 
 .mb-n1000 {
   margin-bottom: -1000px !important;
+}
+
+.mt-30 {
+  margin-top: 15px !important
 }
 
 .mt-40 {
@@ -238,6 +253,10 @@ a:hover {
 
 .mt-n220 {
   margin-top: -220px !important
+}
+
+.mt-n300 {
+  margin-top: -300px !important
 }
 
 .mt-n1000 {
@@ -358,8 +377,12 @@ textarea.form-control {
 
 
 .drop-shadow {
-  filter: drop-shadow(0 0 2rem rgba(29, 29, 29, 0.8));
-  clip-path: inset(0px 0px -100px 0px);
+  filter: drop-shadow(0 0 2.5rem rgba(29, 29, 29, 0.3));
+  //clip-path: inset(0px 0px -100px 0px);
+}
+
+.reflection {
+  -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(85%, transparent) , to(rgba(250, 250, 250, 0.2)));
 }
 
 .highlight {
