--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -18,17 +18,39 @@ layout: default
     <div class="row justify-content-center">
       <div class="col-lg-7">
         <div class="content">
-          <img src="{{project.image | relative_url }}" class="img-fluid w-100 rounded float-left mr-5 mb-80 drop-shadow"
+          {% if project.feature-gif %}
+            {% if project.feature-gif contains "http" %}
+            <img src="{{ project.feature-gif }}" class="img-fluid w-100 rounded float-left mr-5 mb-80 drop-shadow"
             alt="{{project.name}}">
+            {% else %}
+            <img src="{{ site.baseurl }}/{{project.feature-gif}}" class="img-fluid w-100 rounded float-left mr-5 mb-80 drop-shadow"
+            alt="{{project.name}}">
+            {% endif %}
+          {% elsif project.feature-video %}
+          <div class="videoWrapper mb-80 drop-shadow">
+            <iframe src="{{ project.feature-video }}" frameborder="0" allowfullscreen></iframe>
+          </div>
+          {% else %}
+            {% if item.image contains "http" %}
+            <img src="{{ project.image }}" class="img-fluid w-100 rounded float-left mr-5 mb-80 drop-shadow"
+            alt="{{project.name}}">
+            {% else %}
+            <img src="{{ site.baseurl }}/{{ project.image }}" class="img-fluid w-100 rounded float-left mr-5 mb-80 drop-shadow"
+            alt="{{project.name}}">
+            {% endif %}
+          {% endif %}
+
           <h2 class="font-tertiary mb-5 mt-n20">{{ project.name | escape }}</h2>
-          <p class="font-secondary smaller-text mt-n40 mb-30"><span class="text-primary">PROJECT | </span
-              class="text-primary">{{ project.year }}</p>
+          <p class="font-secondary smaller-text mt-n40 mb-30"><span class="text-primary">PROJECT</span
+              class="text-primary"> | {{ project.year }}</p>
           {{ content }}
         </div>
       </div>
     </div>
   </div>
 </section>
+
+
 
 {% if page.resources %}
 <section class="section">
@@ -45,7 +67,7 @@ layout: default
   {% for resource in page.resources %}
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-lg-7 mb-40">
+      <div class="col-lg-7 mb-20">
         <div class="d-flex" onclick="location.href='{{ resource.url }}';" style="cursor:pointer;">
           <div class="mr-lg-4 mr-3">
             <i class="{{ resource.icon }} icon icon-bg bg-white shadow rounded-circle d-block"></i>
