cleaned up settings

--- a/_includes/portfolio-section.html
+++ b/_includes/portfolio-section.html
@@ -1,4 +1,4 @@
-{% if site.data.settings.portfolio-home-items %}
+{% if site.data.settings.featured-projects %}
 <!-- portfolio -->
 <section class="section position-relative mb-n40">
   <div class="container">
