--- a/_includes/portfolio-section.html
+++ b/_includes/portfolio-section.html
@@ -10,7 +10,7 @@
     <div class="row shuffle-wrapper">
       {% for item in site.data.settings.featured-projects %}
       {% assign project = site.data.settings.portfolio-items | where:"id", item | first %}
-      <div class="col-lg-4 col-6 mb-4 shuffle-item" onclick="location.href='{{ item.url }}';" style="cursor:pointer;">
+      <div class="col-lg-4 col-6 mb-4 shuffle-item" onclick="location.href='{{ project.url }}';" style="cursor:pointer;">
         <div class="position-relative rounded hover-wrapper">
           {% if project.image contains "http" %}
           <img src="{{ project.image }}" alt="portfolio-image" class="img-fluid rounded w-100 d-block">
