--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,7 +1,7 @@
 <div class="col-lg-4 col-sm-6 mb-4" onclick="location.href='{{ post.url | relative_url }}';" style="cursor:pointer;">
   <article class="card shadow">
     <div class="rounded hover-wrapper">
-      <img class="rounded card-img-top2" src="{{ post.image | relative_url }}" alt="{{ post.title }}">
+      <img class="rounded card-img-top2" src="{% thumbnails post.image 500 %}" alt="{{ post.title }}">
     </div>
 
     <div class="card-body">
