--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -2,7 +2,8 @@
 layout: default
 ---
 
-{% assign project = site.data.settings.portfolio-items | where:"id", page.id | first %}
+{% assign url = page.path | split: '/' | last | remove: ".md" %}
+{% assign project = site.data.settings.portfolio-items | where:"url", url | first %}
 <!-- /page title -->
 <section class="hero-area">
   <ul class="list-unstyled ml-3 mt-3">
