--- a/_includes/hero-section.html
+++ b/_includes/hero-section.html
@@ -7,8 +7,8 @@
   </ul>
   <div class="container mt-n150">
     <div class="row align-items-center hero-image">
-      <div class="col-sx-4 mx-auto mb-40">
-        <img class="img-fluid rounded drop-shadow" src="{{ site.baseurl }}/assets/images/about/emil.jpeg" alt="bg-shape">
+      <div class="col-sx-4 col-lg-6 col-xl-5 col-md-8 mx-auto mb-40">
+        <img class="img-fluid rounded drop-shadow" src="{{ site.baseurl }}/assets/images/about/emil.jpg" alt="bg-shape">
       </div>
     </div>
   </div>
