--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -39,6 +39,11 @@ a:focus {
   text-decoration: none;
 }
 
+p a {
+  text-decoration: none;
+  color: $primary-color  !important;
+}
+
 a,
 button,
 select {
