--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,6 +1,6 @@
 
 // Color Variables
-$primary-color: #056c67;
+$primary-color: rgb(118, 40, 99);
 $secondary-color: #ffd52b;
 $text-color: #4c4c4c;
 $text-color-dark: #000;
